--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -1,1 +1,15 @@
-<p>person works!</p>
+<div>
+  <div>
+    <h3>{{ person.name }}</h3>
+  </div>
+  <div>
+    <div>
+      Age: {{ person.age }} - Address: {{ person.address }} - City:
+      {{ person.city }} - Country:{{ person.country }}
+    </div>
+  </div>
+  <div>
+    <!-- <button (click)="update.emit(p)"></button> -->
+    <!-- <button (click)="delete.emit(p)"></button> -->
+  </div>
+</div>
